feat: add endpoint "current"
