# src/routes/users.js
@@ -3,7 +3,7 @@ const express = require("express");
 const { schemaSignin, schemaSignup } = require("../models/users");
 const { container } = require("../middlewares/container-ctrl");
 const { auth } = require("../middlewares/auth");
-const { signup, signin, logout } = require("../controllers/users");
+const { signup, signin, logout, current } = require("../controllers/users");
 const validator = require("express-joi-validation").createValidator({});
 
 const router = express.Router();
@@ -11,5 +11,6 @@ const router = express.Router();
 router.post("/signup", validator.body(schemaSignup), container(signup));
 router.post("/signin", validator.body(schemaSignin), container(signin));
 router.post("/logout", auth, container(logout));
+router.post("/current", auth, container(current))
 
 module.exports = router;
